# marlo-inbox

./: .env.example  .gitignore  AGENT_IMPROVEMENTS.md  Makefile  README.md  authenticate_gmail.py  langgraph.json  pyproject.toml
backend/app/: main.py
backend/app/agents/tools/: __init__.py  calendar.py  email.py
backend/app/api/: router.py
backend/app/core/: auth0_ai.py
backend/app/prompts/: system.py
py-inbox/app/: main.py
py-inbox/app/agents/: inbox.py
py-inbox/app/agents/tools/: __init__.py  calendar.py  email.py
py-inbox/app/api/: router.py
py-inbox/app/api/routes/: agent.py  auth.py  chat.py  user.py
py-inbox/app/core/: auth.py  auth0_ai.py  cache.py  config.py  google_oauth.py  google_tools.py  retry.py
py-inbox/app/prompts/: __init__.py  system.py
py-inbox/app/services/: calendar.py  gmail.py  mock_calendar.py  mock_gmail.py
ts-inbox/: langgraph.json  package.json  tsconfig.json
ts-inbox/src/config/: index.ts
web/: eslint.config.js  index.html  package.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/components/: GoogleAuthHandler.tsx  chat-message-bubble.tsx  chat-window.tsx  layout.tsx  memoize-markdown.tsx  thread-sidebar.tsx
web/src/components/auth0/: user-button.tsx
web/src/components/ui/: button.tsx
web/src/pages/: ChatPage.tsx  ClosePage.tsx
