[project]
name = "marlo-inbox"
version = "0.1.0"
description = "AI email & calendar assistant powered by Marlo and Auth0"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # Auth0
    "auth0-ai>=1.0.0b5",
    "auth0-ai-langchain>=1.0.0b5",
    "auth0-fastapi>=1.0.0b5",

    # LangGraph
    "langgraph>=0.5.4",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-api>=0.2.0",
    "langchain-openai>=0.3.0",

    # Google APIs
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",

    # FastAPI
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.10.0",
    "starlette>=0.45.0",

    # Marlo
    "marlo",

    # Utils
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
