[project]
name = "marlo-inbox"
version = "0.1.0"
description = "AI email & calendar assistant powered by Marlo"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # LangGraph
    "langgraph",
    "langgraph-cli[inmem]",
    "langchain-openai",

    # Google APIs & OAuth
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",

    # FastAPI
    "fastapi[standard]",
    "pydantic-settings",
    "starlette",
    "itsdangerous",

    # Marlo
    "marlo-sdk==0.0.3",

    # Utils
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py-inbox/app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
